hibernate config loader and tomcat